# JableDownloader

./: .gitignore  README.md  core.py  debug_jable.py  main.py  main_window.py  merge.py  pyproject.toml  reproduce_error.py  run.lnk  settings.json  start_web.ps1  stop_web.ps1  web_app.py  worker.py
scripts/: start_web.ps1  stop_web.ps1
src/jabledownloader/: __init__.py  config.py  core.py  crawler.py  delete.py  settings_manager.py  web_app.py
