[project]
name = "jabledownloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "m3u8>=6.0.0",
    "pycryptodome>=3.23.0",
    "pyqt5>=5.15.11",
    "pyqt5-qt5==5.15.2",
    "requests>=2.32.5",
    "selenium>=4.39.0",
]
