[project]
name = "jabledownloader"
version = "0.2.0"
description = "Jable / 91Porn / M3U8 影片下載器（NiceGUI web 版）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "m3u8>=6.0.0",
    "nicegui>=3.7.1",
    "pycryptodome>=3.23.0",
    "requests>=2.32.5",
    "selenium>=4.39.0",
]

[project.scripts]
jable-web = "jabledownloader.web_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jabledownloader"]
